removed console logs, added reset of filter and refactor the export in subscibers list page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/kist.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="refine | Build your React-based CRUD applications, without constraints."
+      content="KIST Park Admin Dashboard"
     />
     <meta
       data-rh="true"
       property="og:image"
-      content="https://refine.dev/img/refine_social_new.png"
+      content=""
     />
     <meta
       data-rh="true"
       name="twitter:image"
-      content="https://refine.dev/img/refine_social_new.png"
+      content=""
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,12 +36,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      refine - Build your React-based CRUD applications, without constraints.
+      KIST Park Admin Dashboard
     </title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript></noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
